# mango-cnn-classifier

./: .gitignore  Dockerfile  compare_models.py  do_cnn.py  do_eda.py  do_eda_stats.py  do_preprocessing.py  do_transfer_learning.py  guia_desarrollo.md  main.py  pyproject.toml  stats.json
api/: app.py  requirements.txt
docs/: Manual_Generación_de_API.md  Proyecto_Grupo1_Clasificacion_Mangos_CNN.docx  Proyecto_Grupo1_Clasificacion_Mangos_CNN.md  comparacion_modelos.md  despliegue.md  explicacion.md  hallazgos_dataset.md  presentacion.tex  proc.md
frontend/: index.html
models/: cnn_propia.keras  metrics.json  resnet50_mango.keras
notebooks/: 01_eda.py  02_preprocessing.py  03_cnn_propia.py  04_transfer_learning.py  05_evaluacion.py
