[project]
name = "mangow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.4"
dependencies = [
    "flask>=3.1.3",
    "gdown>=6.1.0",
    "gunicorn>=26.0.0",
    "marimo>=0.23.14",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pillow>=12.3.0",
    "polars>=1.42.1",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "starlette>=1.3.1",
    "tensorflow>=2.21.0",
    "uvicorn>=0.51.0",
]
